--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>The Scala.js Tutorial</title>
   </head>
   <body>
-    <!-- Include Scala.js compiled code -->
-    <script type="text/javascript" src="./ff/js/target/scala-2.13/forestfire-fastopt.js"></script>
+    <script type="text/javascript" src="./ff/js/target/scala-2.13/ff-fastopt.js"></script>
   </body>
 </html>
