--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>The Scala.js Tutorial</title>
+    <title>Forest Fire</title>
 </head>
 <body>
 <script type="text/javascript" src="./ff/js/target/scala-2.13/ff-fastopt.js"></script>
