better drawing, now resizable

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Forest Fire</title>
+    <style type="text/css">
+    * {
+        margin: 0 auto;
+        padding: 0;
+        box-sizing:border-box;
+        overflow: hidden;
+    }
+
+    </style>
 </head>
 <body>
 <script type="text/javascript" src="./ff/js/target/scala-2.13/ff-fastopt.js"></script>
