--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         overflow: hidden;
     }
 
+
     </style>
 </head>
 <body>
-<script type="text/javascript" src="./ff/js/target/scala-2.13/ff-fastopt.js"></script>
+<script type="text/javascript" src="./ff/js/target/scala-2.13/ff-fastopt/main.js"></script>
 </body>
 </html>
